<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <CheckBox
        android:id="@+id/lettucebox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="53dp"
        android:text="@string/lettuce"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <CheckBox
        android:id="@+id/cheesebox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="54dp"
        android:text="@string/cheese"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lettucebox" />

    <CheckBox
        android:id="@+id/tomatoesbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="37dp"
        android:text="@string/tomatoes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cheesebox" />

    <CheckBox
        android:id="@+id/onionbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="64dp"
        android:text="@string/onion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tomatoesbox" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginTop="116dp"
        android:text="@string/add_ons"
        app:layout_constraintStart_toEndOf="@+id/textView7"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="52dp"
        android:text="@string/protein"
        app:layout_constraintStart_toEndOf="@+id/textView9"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="156dp"
        android:layout_marginTop="44dp"
        android:text="@string/Order_Sandwich"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/proteinGroup"
        android:layout_width="120dp"
        android:layout_height="159dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="1dp"
        android:layout_marginBottom="55dp"
        app:layout_constraintStart_toEndOf="@+id/breadGroup"
        app:layout_constraintTop_toBottomOf="@+id/textView7"
        app:layout_constraintVertical_bias="0.0">

        <RadioButton
            android:id="@+id/beefbtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/beef" />

        <RadioButton
            android:id="@+id/chickenbtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chicken" />

        <RadioButton
            android:id="@+id/fishbtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fish" />

    </RadioGroup>

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="43dp"
        android:layout_marginTop="115dp"
        android:text="@string/bread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/breadGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="2dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9">

        <RadioButton
            android:id="@+id/bagelbtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bagel"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView9" />

        <RadioButton
            android:id="@+id/wheatbtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wheat_toast"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radioButton4" />

        <RadioButton
            android:id="@+id/sourbtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sourdough"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radioButton5" />

    </RadioGroup>

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:text="@string/Subtotal"
        app:layout_constraintBottom_toTopOf="@+id/sandwichSubtotal"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/sandwichSubtotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginBottom="333dp"
        android:text="@string/select_options"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_addSandwich"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="98dp"
        android:layout_marginBottom="128dp"
        android:text="@string/add_to_order"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>