<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CoffeeActivity">

    <CheckBox
        android:id="@+id/sweetbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="37dp"
        android:layout_marginTop="171dp"
        android:text="@string/sweet_cream"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/frenchbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="37dp"
        android:text="@string/french_vanilla"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sweetbox" />

    <CheckBox
        android:id="@+id/irishbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="37dp"
        android:text="@string/irish_cream"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frenchbox" />

    <CheckBox
        android:id="@+id/mochabox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="37dp"
        android:text="@string/mocha"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/irishbox" />

    <CheckBox
        android:id="@+id/caramelbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="37dp"
        android:text="@string/caramel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mochabox" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="65dp"
        android:layout_marginEnd="165dp"
        android:text="@string/Order_Coffee"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/sizeSpinner"
        android:layout_width="162dp"
        android:layout_height="24dp"
        android:layout_marginEnd="45dp"
        android:layout_marginBottom="15dp"
        app:layout_constraintBottom_toTopOf="@+id/quantitySpinner"
        app:layout_constraintEnd_toEndOf="parent" />

    <Spinner
        android:id="@+id/quantitySpinner"
        android:layout_width="162dp"
        android:layout_height="26dp"
        android:layout_marginEnd="45dp"
        android:layout_marginBottom="70dp"
        app:layout_constraintBottom_toTopOf="@+id/coffeeSubtotal"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btn_addCoffee"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="58dp"
        android:layout_marginBottom="320dp"
        android:text="@string/add_to_order"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/coffeeSubtotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="76dp"
        android:layout_marginBottom="29dp"
        android:text="@string/select_options"
        app:layout_constraintBottom_toTopOf="@+id/btn_addCoffee"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>