<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="-20dp">

    <EditText
        android:id="@+id/editTextNumber1"
        android:layout_width="209dp"
        android:layout_height="42dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="56dp"
        android:ems="10"
        android:hint="@string/hint_price"
        android:inputType="number"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextNumber2"
        tools:visibility="visible" />

    <EditText
        android:id="@+id/editTextNumber2"
        android:layout_width="214dp"
        android:layout_height="38dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="52dp"
        android:ems="10"
        android:hint="@string/hint_price"
        android:inputType="number"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextNumber3"
        tools:visibility="visible" />

    <EditText
        android:id="@+id/editTextNumber3"
        android:layout_width="208dp"
        android:layout_height="39dp"
        android:layout_marginTop="132dp"
        android:layout_marginEnd="60dp"
        android:ems="10"
        android:hint="@string/hint_price"
        android:inputType="number"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="99dp"
        android:layout_height="37dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="132dp"
        android:text="@string/subtotal"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="102dp"
        android:layout_height="35dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="176dp"
        android:text="@string/tax"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:text="@string/Current_Order"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="91dp"
        android:layout_height="44dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="224dp"
        android:text="@string/total"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ListView
        android:id="@+id/listView1"
        android:layout_width="338dp"
        android:layout_height="306dp"
        android:layout_marginTop="268dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="580dp"
        android:text="@string/rm_item"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="232dp"
        android:layout_marginTop="580dp"
        android:text="@string/place_ord"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>